@@ -133,7 +133,7 @@ LIBS = @LIBS@ @WRAPLIB@
 # additional files to distribute and clean
 EXTRA_DIST = ops_TEMPLATE.c $(man_MANS) $(TESTS)
 CLEANFILES = $(BUILT_SOURCES)
-DISTCLEANFILES = build_version.h
+DISTCLEANFILES = build_version.h ops_autofs.c
 
 # do not distribute files that should be generated by lex/yacc locally
 dist-hook:
